edit post feature

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -54,7 +54,7 @@
                     >(<%=element.likes.length%>)</span
                   ></a
                 >
-                <span class="text-gray-400">Edit</span>
+                <a class="text-gray-400" href="/edit/<%=element._id%>">Edit</a>
               </div>
               <span class="text-right block text-blue-400"
                 ><%=userData.username %></span
